<?xml version="1.0"?>

<package format="3">
  <name>gnss_receiver</name>
  <version>0.0.0</version>
  <description>gnss_receiver</description>
  <maintainer email="shun.saito.6t@stu.hosei.ac.jp">shunsugar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
