<?xml version="1.0"?>

<package format="3">
  <name>led_controller</name>
  <version>0.0.0</version>
  <description>led_controller</description>
  <maintainer email="shun.saito.6t@stu.hosei.ac.jp">shunsugar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
