cmake_minimum_required(VERSION 3.8)
project(step_response)

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)

# Add include directories
include_directories(include)

# ---------- cpp ---------- #
# Create cpp executable


# Install cpp executable


ament_package()

