<?xml version="1.0"?>

<package format="3">
  <name>vehicle_controller</name>
  <version>0.0.0</version>
  <description>vehicle_controller</description>
  <maintainer email="shun.saito.6t@stu.hosei.ac.jp">shunsugar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
